--- a/styles/_team.scss
+++ b/styles/_team.scss
@@ -2,6 +2,7 @@
     background-color: $secondBright;
     @include flexCenter(column);
     
+    @media (max-width:992px){background: linear-gradient(45deg, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 50%, rgba(188,46,58,1) 50%, rgba(188,46,58,1) 100%);}
 }
 .team__title{
    margin: 5vh;
