--- a/styles/style.css
+++ b/styles/style.css
@@ -670,6 +670,12 @@
           align-items: center;
 }
 
+@media (max-width: 992px) {
+  .viewSection.team {
+    background: linear-gradient(45deg, whitesmoke 0%, whitesmoke 50%, #bc2e3a 50%, #bc2e3a 100%);
+  }
+}
+
 .team__title {
   margin: 5vh;
   text-align: center;
@@ -1078,6 +1084,51 @@
           transform: scale(1.3);
 }
 
+@media (max-width: 1200px) {
+  .viewSection.clients {
+    background: linear-gradient(45deg, #bc2e3a 0%, #bc2e3a 50%, whitesmoke 50%, whitesmoke 100%);
+  }
+}
+
+@media (max-width: 992px) {
+  .viewSection.clients > .clientsCotent {
+    height: 70%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .viewSection.clients > .clientsCotent > .clientsCotent__picture {
+    width: 20vh;
+    height: 20vh;
+    -webkit-box-flex: 2;
+        -ms-flex-positive: 2;
+            flex-grow: 2;
+  }
+  .viewSection.clients > .clientsCotent > .clientsCotent__text {
+    width: 100%;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
+  .viewSection.clients > .clientsCotent > .clientsCotent__text > .text__reviev > .reviev__description {
+    font-size: 1rem;
+  }
+  .viewSection.clients > .clientsCotent > .clientsCotent__text > .clientsCotent__thumbnailSlider {
+    width: 70vw;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .viewSection.clients > .clientsCotent > .clientsCotent__text > .clientsCotent__thumbnailSlider > .thumbnailSlider__element {
+    width: 15vh;
+    height: 15vh;
+  }
+}
+
 .clients__decorationLeft {
   position: absolute;
   width: 100vh;
@@ -1092,7 +1143,7 @@
   z-index: 9;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1200px) {
   .clients__decorationLeft {
     display: none;
   }
@@ -1110,7 +1161,7 @@
   z-index: 0;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1200px) {
   .clients__decorationTop {
     display: none;
   }
@@ -1220,6 +1271,39 @@
 .viewSection.contact > .contact__container > .contact__footer {
   border-top: 2px solid #ffffff;
   font-size: 1.2rem;
+}
+
+@media (max-width: 762px) {
+  .viewSection.contact {
+    height: 200vw;
+  }
+  .viewSection.contact > .contact__container {
+    height: 100%;
+  }
+  .viewSection.contact > .contact__container > .contact__infos {
+    height: 50vh;
+    width: 50%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .viewSection.contact > .contact__container > .contact__infos > .infos__element {
+    width: 100%;
+  }
+  .viewSection.contact > .contact__container > .contact__infos > .infos__element > i {
+    font-size: 3rem;
+    margin-right: 0;
+  }
+  .viewSection.contact > .contact__container > .contact__socials {
+    width: 90%;
+  }
+  .viewSection.contact > .contact__container > .contact__footer {
+    width: 90%;
+  }
 }
 
 .contact__decorationBottom {
